Creation of routes and login functionality

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Planning management system for MR Coffee teams",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "create-db": "psql -U postgres -f sql/create-db.sql",
     "create-tables": "psql -U postgres -d mrcofee -f sql/create-tables.sql",
     "seed-tables": "psql -U postgres -d mrcofee -f sql/seed-tables.sql"
@@ -23,6 +24,8 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "pg-promise": "^10.11.0"
   }
